--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   gtag('js', new Date());
 
   gtag('config', 'UA-221521480-1');
-</script>
+</script><script src="https://www.googleoptimize.com/optimize.js?id=OPT-5J9XQ9K"></script>
 
 <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
